--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,11 +6,12 @@
     align-items: center;
     /* justify-content: space-between; */
     justify-content: center;
-    gap: 10%;
+    gap: 15%;
     margin-top: 49px;
     z-index: 1;
     margin-left: 15%;
     margin-right: 15%;
+    
 }
 
 .content{
@@ -52,7 +53,8 @@
 .heroImg{
     width: 33%;
     z-index: 1;
-    max-width: 367px;
+    max-width: 250px;
+    max-height: auto;
 
     /* animation-name: floating; */
     animation-duration: 3s;
